--- a/lead-import-visualizer/.env.development
+++ b/lead-import-visualizer/.env.development
@@ -1,3 +1,3 @@
-# Em lead-import-visualizer/.env.development
-
-VITE_API_BASE_URL=http://172.29.43.177/api
+# O frontend só precisa saber o caminho relativo da API.
+# O proxy no vite.config.ts fará o resto.
+VITE_API_BASE_URL=/api
