--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -7,6 +7,7 @@ services:
             dockerfile: Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
+                PHP_MEMORY_LIMIT: 512M        
         image: 'sail-8.4/app'
         extra_hosts:
             - 'host.docker.internal:host-gateway'
