--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,10 @@
-# ./render.yaml  (NOVO ARQUIVO)
+# ./render.yaml (VERSÃO CORRIGIDA)
 
 services:
   # 1. Serviço para o Frontend (React/Vite)
-  # Usaremos o tipo "Static Site" do Render, que é o mais eficiente e barato.
-  # Ele não precisa de um Dockerfile, pois o próprio Render fará o build.
-  - type: static
+  - type: web              ### CORREÇÃO ###
     name: frontend
-    env: static
+    runtime: static        ### CORREÇÃO ###
     # Garante que o deploy só acontece se houver mudanças no frontend
     buildFilter:
       paths:
@@ -25,40 +23,33 @@ services:
         destination: /index.html
 
   # 2. Serviço para a API (Backend Laravel)
-  # Este será um serviço web que usa o Dockerfile de produção que criaremos a seguir.
   - type: web
     name: backend
-    env: docker
-    # Aponta para a pasta do backend
+    runtime: docker        ### CORREÇÃO (runtime em vez de env) ###
     dockerContext: ./backend
-    # Aponta para o novo Dockerfile de produção
     dockerfilePath: ./backend/Dockerfile.prod
-    # Garante que o deploy só acontece se houver mudanças no backend
     buildFilter:
       paths:
         - backend/**
-    # O Render precisa saber como verificar se sua API está saudável
-    healthCheckPath: /api/health # Crie esta rota no seu api.php para retornar um 200 OK
+    healthCheckPath: /api/health
     envVars:
       - key: APP_URL
-        # O Render injeta a URL do serviço automaticamente
         fromService:
           type: web
           name: backend
           property: url
       - key: FRONTEND_URL
         fromService:
-          type: static
+          type: web           ### CORREÇÃO ###
           name: frontend
           property: url
       - key: DB_CONNECTION
         value: mysql
       - key: DB_HOST
         fromService:
-          type: psql # ou 'mysql' se disponível no Render
+          type: psql
           name: database
           property: internalHost
-      # As variáveis do banco de dados são injetadas a partir do serviço de DB
       - key: DB_DATABASE
         fromService:
           type: psql
@@ -74,9 +65,7 @@ services:
           type: psql
           name: database
           property: password
-      # Agrupamos os segredos (APP_KEY, etc.) para segurança
       - fromGroup: laravel-secrets
-    # Comando para rodar as migrations a cada deploy
     startCommand: |
       php artisan migrate --force &&
       php artisan config:cache &&
@@ -86,35 +75,33 @@ services:
   # 3. Serviço de Worker para Filas do Laravel
   - type: worker
     name: queue-worker
-    env: docker
+    runtime: docker        ### CORREÇÃO (runtime em vez de env) ###
     dockerContext: ./backend
     dockerfilePath: ./backend/Dockerfile.prod
     buildFilter:
       paths:
         - backend/**
-    # Comando específico para iniciar o worker
     startCommand: "php artisan queue:work --verbose --tries=3 --timeout=120"
     envVars:
       - fromGroup: laravel-secrets
 
   # 4. Banco de Dados Gerenciado
-  - type: psql # PostgreSQL é a opção mais comum e robusta nos planos gratuitos
+  - type: psql
     name: database
     plan: free
 
 # --- GRUPO DE SEGREDOS ---
-# Estas variáveis devem ser configuradas na interface do Render
 envVarGroups:
   - name: laravel-secrets
     envVars:
       - key: APP_KEY
-        sync: false # Cole o valor do seu .env aqui
+        sync: false
       - key: APP_ENV
         value: production
       - key: APP_DEBUG
         value: false
       - key: SANCTUM_STATEFUL_DOMAINS
         fromService:
-          type: static
+          type: web           ### CORREÇÃO ###
           name: frontend
           property: url
