--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,8 @@
 
 services:
   # 1. Serviço para o Frontend (React/Vite)
-  - type: web              ### CORREÇÃO ###
+  - type: static_site # CORREÇÃO: "static" alterado para "static_site"
     name: frontend
-    runtime: static        ### CORREÇÃO ###
     # Garante que o deploy só acontece se houver mudanças no frontend
     buildFilter:
       paths:
@@ -25,13 +24,13 @@ services:
   # 2. Serviço para a API (Backend Laravel)
   - type: web
     name: backend
-    runtime: docker        ### CORREÇÃO (runtime em vez de env) ###
+    env: docker
     dockerContext: ./backend
     dockerfilePath: ./backend/Dockerfile.prod
     buildFilter:
       paths:
         - backend/**
-    healthCheckPath: /api/health
+    healthCheckPath: /api/health # Lembre-se de criar esta rota no seu api.php
     envVars:
       - key: APP_URL
         fromService:
@@ -40,11 +39,11 @@ services:
           property: url
       - key: FRONTEND_URL
         fromService:
-          type: web           ### CORREÇÃO ###
+          type: static_site # CORREÇÃO: "static" alterado para "static_site"
           name: frontend
           property: url
       - key: DB_CONNECTION
-        value: mysql
+        value: mysql # ATENÇÃO: Verifique se o serviço de DB abaixo é mysql ou psql
       - key: DB_HOST
         fromService:
           type: psql
@@ -66,16 +65,17 @@ services:
           name: database
           property: password
       - fromGroup: laravel-secrets
+    # Comando para rodar as migrations e otimizações antes de iniciar o servidor
     startCommand: |
       php artisan migrate --force &&
       php artisan config:cache &&
       php artisan route:cache &&
-      /usr/sbin/php-fpm -O
+      /usr/sbin/php-fpm83 -O # Ajuste a versão do php-fpm se necessário
 
   # 3. Serviço de Worker para Filas do Laravel
   - type: worker
     name: queue-worker
-    runtime: docker        ### CORREÇÃO (runtime em vez de env) ###
+    env: docker
     dockerContext: ./backend
     dockerfilePath: ./backend/Dockerfile.prod
     buildFilter:
@@ -86,7 +86,7 @@ services:
       - fromGroup: laravel-secrets
 
   # 4. Banco de Dados Gerenciado
-  - type: psql
+  - type: psql # PostgreSQL é a opção mais comum e robusta nos planos gratuitos
     name: database
     plan: free
 
@@ -102,6 +102,6 @@ envVarGroups:
         value: false
       - key: SANCTUM_STATEFUL_DOMAINS
         fromService:
-          type: web           ### CORREÇÃO ###
+          type: static_site # CORREÇÃO: "static" alterado para "static_site"
           name: frontend
           property: url
