--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,11 @@
-# ./render.yaml (VERSÃO CORRIGIDA)
+# ./render.yaml (VERSÃO CORRIGIDA E VERIFICADA)
 
 services:
   # 1. Serviço para o Frontend (React/Vite)
-  - type: static_site # CORREÇÃO: "static" alterado para "static_site"
+  # CORREÇÃO: O tipo é 'web' e o ambiente de execução é 'static'.
+  - type: web
     name: frontend
+    runtime: static # Define que é um site estático
     # Garante que o deploy só acontece se houver mudanças no frontend
     buildFilter:
       paths:
@@ -24,22 +26,23 @@ services:
   # 2. Serviço para a API (Backend Laravel)
   - type: web
     name: backend
-    env: docker
+    runtime: docker # O runtime aqui é 'docker' pois usamos um Dockerfile
     dockerContext: ./backend
     dockerfilePath: ./backend/Dockerfile.prod
     buildFilter:
       paths:
         - backend/**
-    healthCheckPath: /api/health # Lembre-se de criar esta rota no seu api.php
+    healthCheckPath: /api/health # Lembre-se de criar esta rota
     envVars:
       - key: APP_URL
         fromService:
           type: web
           name: backend
           property: url
+      # CORREÇÃO: A referência ao frontend também precisa saber que ele é do tipo 'web'
       - key: FRONTEND_URL
         fromService:
-          type: static_site # CORREÇÃO: "static" alterado para "static_site"
+          type: web
           name: frontend
           property: url
       - key: DB_CONNECTION
@@ -75,7 +78,7 @@ services:
   # 3. Serviço de Worker para Filas do Laravel
   - type: worker
     name: queue-worker
-    env: docker
+    runtime: docker
     dockerContext: ./backend
     dockerfilePath: ./backend/Dockerfile.prod
     buildFilter:
@@ -86,7 +89,7 @@ services:
       - fromGroup: laravel-secrets
 
   # 4. Banco de Dados Gerenciado
-  - type: psql # PostgreSQL é a opção mais comum e robusta nos planos gratuitos
+  - type: psql
     name: database
     plan: free
 
@@ -100,8 +103,9 @@ envVarGroups:
         value: production
       - key: APP_DEBUG
         value: false
+      # CORREÇÃO: A referência ao frontend também precisa saber que ele é do tipo 'web'
       - key: SANCTUM_STATEFUL_DOMAINS
         fromService:
-          type: static_site # CORREÇÃO: "static" alterado para "static_site"
+          type: web
           name: frontend
           property: url
