--- a/backend/.env.staging
+++ b/backend/.env.staging
@@ -1,52 +1,33 @@
-########  APP  ########
-APP_NAME="Catarinense Leads"
-APP_ENV=staging
+APP_NAME=Catarinense Leads
+APP_ENV=production
 APP_KEY=base64:S0ByR8SvarrM0uQWc/l27WxHFJRM848q9wl2DZIGHV0=
 APP_DEBUG=false
-APP_URL=https://staging.leads-catarinense.com
+APP_URL=http://164.90.138.102       # troque depois para sub-domínio
 
 APP_LOCALE=pt_BR
 APP_FALLBACK_LOCALE=pt_BR
-APP_MAINTENANCE_DRIVER=file
 
-########  LOG  ########
 LOG_CHANNEL=stack
-LOG_LEVEL=info   # debug só local
+LOG_LEVEL=info
 
-########  SESSION & SECURITY  ########
-SESSION_DRIVER=cookie
-SESSION_LIFETIME=120
-SESSION_DOMAIN=staging.leads-catarinense.com
-SESSION_ENCRYPT=true
-SANCTUM_STATEFUL_DOMAINS=staging.leads-catarinense.com
-CORS_ALLOWED_ORIGINS=https://staging.leads-catarinense.com
+SESSION_DOMAIN=164.90.138.102
+SANCTUM_STATEFUL_DOMAINS=164.90.138.102,localhost:8080
 
-########  DATABASE  ########
+# --- Banco ---
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=leads_staging
-DB_USERNAME=leads
-DB_PASSWORD=Cavalo1?
+DB_USERNAME=leads_user
+DB_PASSWORD=secret123            # escolha outro forte
 
-########  QUEUE / CACHE  ########
+# --- Queue / Cache ---
 QUEUE_CONNECTION=database
 CACHE_DRIVER=database
-CACHE_STORE=database
+FILESYSTEM_DISK=local
 
-########  REDIS (opcional – manter vazio)  ########
-REDIS_CLIENT=phpredis
-REDIS_HOST=redis
-REDIS_PASSWORD=null
-REDIS_PORT=6379
+# --- CORS (front em 8080) ---
+CORS_ALLOWED_ORIGINS=http://164.90.138.102:8080
 
-########  MAIL (log por enquanto)  ########
+# --- Mail (log) ---
 MAIL_MAILER=log
-MAIL_FROM_ADDRESS="noreply@staging.leads-catarinense.com"
-MAIL_FROM_NAME="Catarinense Leads"
-
-########  AWS / OUTROS  ########
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
