feat: add healthcheck to MySQL service in docker-compose and update deploy script steps

--- a/backend/docker-compose.staging.yml
+++ b/backend/docker-compose.staging.yml
@@ -17,6 +17,11 @@ services:
       MYSQL_USER: ${DB_USERNAME}
       MYSQL_PASSWORD: ${DB_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-p${DB_PASSWORD}"]
+      timeout: 20s
+      retries: 10
+      start_period: 10s
     networks: [sail]
 
   laravel:
