--- a/backend/composer.json
+++ b/backend/composer.json
@@ -61,7 +61,7 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": ["knuckles/scribe"]
         }
     },
     "config": {
