fix: implement cache busting for Docker builds and update deploy script

--- a/backend/docker-compose.staging.yml
+++ b/backend/docker-compose.staging.yml
@@ -29,6 +29,8 @@ services:
     build:
       context: . 
       dockerfile: Dockerfile
+      args:
+        CACHE_BUSTER: ${CACHE_BUSTER:-1}
     image: leads-backend
     container_name: leads-backend
     env_file: .env.staging
