--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -44,7 +44,9 @@ USER sail
 FROM base AS vendor
 
 COPY --chown=sail:sail composer.json composer.lock ./
-RUN composer install --no-interaction --no-dev --no-scripts --optimize-autoloader
+
+ARG CACHE_BUSTER=1
+RUN --mount=type=cache,target=/root/.composer/cache composer install --no-interaction --no-dev --no-scripts --optimize-autoloader
 
 # --- Estágio Final ---
 # Começamos de novo da imagem base para manter a imagem final limpa.
