feat(clt-backend): implementar fluxo completo de consultas CLT com exportação Excel
- adicionar job `ProcessCltConsultJob` com teimosinha, tratamento de CPFs inválidos e normalização
- integrar com serviço FactaAPI, com controle de tentativas e falhas não-retriáveis
- criar exportador `CltConsultExport` com cálculo de idade, tempo de admissão e valor máximo da prestação
- reorganizar ordem das colunas e ajustar cabeçalhos com títulos claros
- aplicar formatação no Excel (centralização e cabeçalho em negrito)
- salvar relatórios versionados em disco com metadados no banco

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -32,7 +32,7 @@ services:
 
   queue:
     image: sail-8.4/app
-    command: php artisan queue:work --verbose --timeout=120 --memory=480 --tries=3
+    command: php artisan queue:work --queue=default --sleep=3 --verbose --timeout=0 --memory=512 --tries=1
     environment:
       <<: *app-environment
     volumes:
