--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,6 +3,7 @@
 # Âncora para reutilizar a configuração de ambiente
 x-app-environment: &app-environment
   WWWUSER: '${WWWUSER}'
+  WWWGROUP: '${WWWGROUP:-1000}' 
   LARAVEL_SAIL: 1
   XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
   XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
